--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
   - pip install mercantile
 
 script: 
-  - "python -m pytest"
+  - "python -m pytest -v"
 
 notifications:
     email:
