--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ install:
 
 script: 
   - python -c 'import contextily; print(contextily)'
+  - python -c 'import mercantile; print(mercantile)'
   - python setup.py sdist >/dev/null
   - python -m pytest -v
 
