Pinning tests to test folder for pytest

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,9 @@ install:
 script: 
   - python -c 'import contextily; print(contextily)'
   - python -c 'import mercantile; print(mercantile)'
-  - python -c 'import os; print(os.listdir(".")'
+  - python -c 'import os; print(os.listdir("."))'
   - python setup.py sdist >/dev/null
-  - python -m pytest -v
+  - python -m pytest -v tests/
 
 notifications:
     email:
