--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ only:
   - master
 os:
   - linux
-    #- osx
+  - osx
 python:
   - 2.7
-    #- 3.4
-    #- 3.5
+  - 3.4
+  - 3.5
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then wget https://repo.continuum.io/miniconda/Miniconda2-latest-MacOSX-x86_64.sh -O miniconda.sh; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh; fi
