--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ os:
 python:
   - 3.5
   - 3.6
+  - 3.7
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then wget https://repo.continuum.io/miniconda/Miniconda2-latest-MacOSX-x86_64.sh -O miniconda.sh; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh; fi
+  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
   - chmod +x miniconda.sh
   - ./miniconda.sh -b -p ./miniconda
   - export PATH=`pwd`/miniconda/bin:$PATH
@@ -21,7 +21,8 @@ before_install:
   - pip install coveralls
 
 install:
-  - python setup.py install
+  - python -m pip install -e .
+  - conda list
 
 script:
   - python setup.py sdist >/dev/null
