--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ only:
   - master
 os:
   - linux
-python:
-  - 3.5
-  - 3.6
-  - 3.7
+env:
+  - PYTHON="3.5"
+  - PYTHON="3.6"
+  - PYTHON="3.7"
 before_install:
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
   - chmod +x miniconda.sh
@@ -16,7 +16,7 @@ before_install:
   - export PATH=`pwd`/miniconda/bin:$PATH
   - conda update --yes conda
   - conda config --add channels conda-forge --force
-  - conda create --yes -n TEST python=$TRAVIS_PYTHON_VERSION --file requirements.txt --file requirements-dev.txt
+  - conda create --yes -n TEST python=$PYTHON --file requirements.txt --file requirements-dev.txt
   - source activate TEST
   - pip install coveralls
 
