Add IPython in the readthedocs env

--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -17,5 +17,6 @@ dependencies:
 - numpydoc
 - nbsphinx
 - pandoc
+- ipython
 - pip:
   - git+https://github.com/pandas-dev/pydata-sphinx-theme.git@master
