--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,9 +1,15 @@
 version: 2
-formats: []
-conda:
-    environment: docs/environment.yml
+
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.11"
+
+sphinx:
+  configuration: docs/conf.py
+
 python:
-    version: 3
-    install:
-        - method: pip
-          path: .
+  install:
+    - requirements: docs/requirements.txt
+    - method: pip
+      path: .
