--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,15 +1,12 @@
 version: 2
-
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.11"
-
-sphinx:
-  configuration: docs/conf.py
-
+    python: mambaforge-latest
 python:
   install:
-    - requirements: docs/requirements.txt
-    - method: pip
-      path: .
+  - method: pip
+    path: .
+conda:
+  environment: docs/environment.yml
+formats: []
