--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -2,7 +2,7 @@ name: contextily_docs
 channels:
 - conda-forge
 dependencies:
-- python=3.7
+- python=3.11
 # dependencies
 - numpy
 - geopy
@@ -20,4 +20,4 @@ dependencies:
 - nbsphinx
 - pandoc
 - ipython
-- pydata-sphinx-theme
+- sphinx-book-theme
