--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latests]
+        os: [ubuntu-latest]
         environment-file:
           - ci/envs/39-minimal.yaml
           - ci/envs/310-conda-forge.yaml
@@ -27,7 +27,7 @@ jobs:
         include:
           - os: macos-latest
             environment-file: ci/envs/312-latest-conda-forge.yaml
-          - os: macos-latest
+          - os: macos-14 # apple silicon
             environment-file: ci/envs/312-latest-conda-forge.yaml
           - os: windows-latest
             environment-file: ci/envs/312-latest-conda-forge.yaml
