update macos versions

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -25,9 +25,9 @@ jobs:
           - ci/envs/311-conda-forge.yaml
           - ci/envs/312-latest-conda-forge.yaml
         include:
-          - os: macos-latest
+          - os: macos-13
             environment-file: ci/envs/312-latest-conda-forge.yaml
-          - os: macos-14 # apple silicon
+          - os: macos-latest # apple silicon
             environment-file: ci/envs/312-latest-conda-forge.yaml
           - os: windows-latest
             environment-file: ci/envs/312-latest-conda-forge.yaml
