--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -10,3 +10,6 @@ python:
 conda:
   environment: docs/environment.yml
 formats: []
+sphinx:
+  # Path to your Sphinx configuration file.
+  configuration: docs/conf.py
