--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -20,17 +20,17 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         environment-file:
-          - ci/envs/39-minimal.yaml
           - ci/envs/310-conda-forge.yaml
           - ci/envs/311-conda-forge.yaml
           - ci/envs/312-latest-conda-forge.yaml
+          - ci/envs/313-latest-conda-forge.yaml
         include:
           - os: macos-13
-            environment-file: ci/envs/312-latest-conda-forge.yaml
+            environment-file: ci/envs/313-latest-conda-forge.yaml
           - os: macos-latest # apple silicon
-            environment-file: ci/envs/312-latest-conda-forge.yaml
+            environment-file: ci/envs/313-latest-conda-forge.yaml
           - os: windows-latest
-            environment-file: ci/envs/312-latest-conda-forge.yaml
+            environment-file: ci/envs/313-latest-conda-forge.yaml
     defaults:
       run:
         shell: bash -l {0}
