--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -24,6 +24,7 @@ jobs:
           - ci/envs/311-conda-forge.yaml
           - ci/envs/312-latest-conda-forge.yaml
           - ci/envs/313-latest-conda-forge.yaml
+          - ci/envs/314-latest-conda-forge.yaml
         include:
           - os: macos-15-intel
             environment-file: ci/envs/313-latest-conda-forge.yaml
